calculator/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
        - name: calculator
          image: ghcr.io/tluhk/calculator:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3030 # Rakenduse sees töötav port
      imagePullSecrets:
        - name: ghcr-secret
