calculator/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  selector:
    app: calculator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
  type: ClusterIP
