calculator/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  annotations:
    kubernetes.io/ingressClassName: "traefik" # Või "nginx"
spec:
  rules:
    - host: calculator.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calculator-service
                port:
                  number: 80
